[package]
name = "dxt-lossless-transform-bc1"
version = "0.1.0"
edition = "2021"
description = "Fast lossless transforms for BC1 texture data that improve their compression ratio. This is an unstable crate containing the raw implementation."
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["dxt-lossless-transform-api-common/std", "dxt-lossless-transform-common/std", "thiserror/std"]
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = ["dxt-lossless-transform-common/no-runtime-cpu-detection"]
# Use nightly compiler features (AVX512)
nightly = ["dxt-lossless-transform-common/nightly", "safe-allocator-api/nightly"]
# Code only required for benchmarks.
bench = []
# Experimental features, not ready for prime time. Use at your own risk!
experimental = []
# C FFI exports for the safe wrapper functions and C API exports
c-exports = ["dxt-lossless-transform-api-common/c-exports"]

[dependencies]
dxt-lossless-transform-common = { workspace = true, default-features = false }
dxt-lossless-transform-api-common = { workspace = true, default-features = false }
likely_stable = "0.1.3"
derive-enum-all-values = "0.2.1"
thiserror = { version = "2.0.12", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"
safe-allocator-api = "0.4.0"
dxt-lossless-transform-bc1-api = { workspace = true, default-features = true }
dxt-lossless-transform-ltu = { workspace = true, default-features = true }

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

# Benchmark Stuff
[[bench]]
name = "transform_standard"
path = "benches/transform_standard/main.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "untransform_standard"
path = "benches/untransform_standard/main.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "block_decode"
path = "benches/block_decode/main.rs"
harness = false

[[bench]]
name = "normalize_blocks"
path = "benches/normalize_blocks/main.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }