[package]
name = "dxt-lossless-transform-bc3"
version = "0.1.0"
edition = "2021"
description = "Fast lossless transforms for BC3 texture data that improve their compression ratio. This is an unstable crate containing the raw implementation."
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["dxt-lossless-transform-common/std"]
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = ["dxt-lossless-transform-common/no-runtime-cpu-detection"]
# Use nightly compiler features (AVX512)
nightly = ["dxt-lossless-transform-common/nightly", "dxt-lossless-transform-api-common/nightly"]
# Benchmarking feature to expose internal APIs
bench = []
# Experimental features, not ready for prime time. Use at your own risk!
experimental = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dxt-lossless-transform-common = { workspace = true, default-features = false }
dxt-lossless-transform-api-common = { workspace = true, default-features = false }
thiserror = { workspace = true }
likely_stable = { workspace = true }
derive-enum-all-values = { workspace = true }
ptr-utils = { version = "0.1.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
safe-allocator-api = { workspace = true }

# Benchmark Stuff
[[bench]]
name = "transform_standard"
path = "benches/transform_standard/main.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "untransform_standard"
path = "benches/untransform_standard/main.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "block_decode"
path = "benches/block_decode/main.rs"
harness = false

[[bench]]
name = "normalize_blocks"
path = "benches/normalize_blocks/main.rs"
harness = false
required-features = ["experimental"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }