[package]
name = "dxt-lossless-transform-bc7"
version = "0.1.0"
edition = "2021"
description = "Fast lossless transforms for BC7 texture data that improve their compression ratio. This is an unstable crate containing the raw implementation."
repository = "https://github.com/Sewer56/dxt-lossless-transform"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
std = []
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }