[package]
name = "dxt-lossless-transform-bc7"
version = "0.1.0"
edition = "2021"
description = "Fast lossless transforms for BC7 texture data that improve their compression ratio. This is an unstable crate containing the raw implementation."
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["dxt-lossless-transform-common/std"]
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = ["dxt-lossless-transform-common/no-runtime-cpu-detection"]
# Use nightly compiler features (AVX512)
nightly = ["dxt-lossless-transform-common/nightly"]

[dependencies]
dxt-lossless-transform-common = { workspace = true, default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.7.0"
rstest = "0.25.0"

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }