[package]
name = "dxt-lossless-transform-common"
version = "0.1.0"
edition = "2021"
description = "Code shared between multiple internal implementations of the BC transforms"
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = [
    "multiversion/std",  # Enables runtime checks in multiversion
    "thiserror/std",
    "safe-allocator-api/std",
]
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = []
# Use nightly compiler features (AVX512)
nightly = ["safe-allocator-api/nightly"]
# Public re-exports of private functions for benchmarking.
bench = []

[dependencies]
multiversion = { version = "0.8.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
safe-allocator-api = { version = "0.4.0", default-features = false }
derive-enum-all-values = "0.2.1"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2.17"

[dev-dependencies]
rstest = "0.25.0"
criterion = "0.5.1"

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86", target_arch = "x86_64", target_arch = "aarch64")))'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[[bench]]
name = "color565_decorrelation"
harness = false

[[bench]]
name = "split_color565_endpoints"
harness = false
required-features = ["bench"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }