[package]
name = "dxt-lossless-transform-common"
version = "0.1.0"
edition = "2021"
description = "Code shared between multiple internal implementations of the BC transforms"
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.MD"

# Documentation configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = [
    "multiversion/std",  # Enables runtime checks in multiversion
    "thiserror/std",
    "safe-allocator-api/std",
]
# See README.md for more information on using Profile-Guided Optimization.
pgo = []
# Use CPU features selected at compile time.
no-runtime-cpu-detection = []
# Use nightly compiler features (allocator_api)
nightly = ["safe-allocator-api/nightly"]
# Public re-exports of private functions for benchmarking.
bench = []

[dependencies]
multiversion = { workspace = true }
thiserror = { workspace = true }
safe-allocator-api = { workspace = true }
derive-enum-all-values = { workspace = true }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2.17"

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "color565_decorrelation"
harness = false

[[bench]]
name = "split_color565_endpoints"
harness = false
required-features = ["bench"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }