[package]
name = "dxt-lossless-transform-file-formats-debug"
version = "1.0.0"
edition = "2021"
description = "Debug and research utilities for dxt-lossless-transform file format handling"
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.md"

[lib]
bench = false

[features]
default = ["std", "file-io"]
std = [
    "thiserror/std",
    "dxt-lossless-transform-file-formats-api/std",
    "dxt-lossless-transform-common/std",
]
file-io = [
    "std",
    "lightweight-mmap",
    # Use the 'Path' based APIs.
    "lightweight-mmap/std",
    "dxt-lossless-transform-file-formats-api/file-io",
]

[dependencies]
# Core dependencies
dxt-lossless-transform-file-formats-api = { workspace = true, default-features = false }
dxt-lossless-transform-common = { workspace = true, default-features = false }

# External dependencies
thiserror = { version = "2.0", default-features = false }

# Optional dependencies for file I/O
lightweight-mmap = { version = "0.7.0", optional = true }

[dev-dependencies]
rstest = "0.26"
tempfile = "3.8"
dxt-lossless-transform-dds = { workspace = true, default-features = true }
dxt-lossless-transform-bc1-api = { workspace = true, default-features = true } 