[package]
name = "dxt-lossless-transform-ltu"
version = "0.1.0"
edition = "2021"
readme = "README.MD"
description = "Lossless Transform Utils size estimation implementation for DXT lossless transform"

[dependencies]
dxt-lossless-transform-api-common = { path = "../../api/dxt-lossless-transform-api-common", default-features = false }
dxt-lossless-transform-common = { path = "../../core/dxt-lossless-transform-common", default-features = false }
lossless-transform-utils = "0.1.0"
thiserror = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = ["dxt-lossless-transform-api-common/std", "thiserror/std"]
# Use nightly compiler features (AVX512)
nightly = ["dxt-lossless-transform-api-common/nightly", "dxt-lossless-transform-common/nightly"]
