[package]
name = "dxt-lossless-transform-zstd"
version = "0.1.0"
edition = "2021"
readme = "README.MD"
description = "ZStandard size estimation implementation for DXT lossless transform"

[dependencies]
dxt-lossless-transform-api-common = { path = "../../api/dxt-lossless-transform-api-common", default-features = false }
dxt-lossless-transform-common = { path = "../../core/dxt-lossless-transform-common", default-features = false }
zstd-sys = { version = "2.0.15", features = ["experimental"] } # 1.5.7
thiserror = { version = "2.0", default-features = false }

# Optional dependencies for examples
dxt-lossless-transform-bc1 = { path = "../../core/dxt-lossless-transform-bc1", optional = true }

[features]
default = ["std"]
std = ["dxt-lossless-transform-api-common/std", "thiserror/std"]

