[package]
name = "dxt-lossless-transform-cli"
version = "0.1.0"
edition = "2021"

[features]
# Debugging and Research Tools/Utilities for BC7
# Currently BC7
debug-bc7 = ["debug"]
# Debugging BC1 behaviour
debug-bc1 = ["debug", "dxt-lossless-transform-bc1/experimental"]
# Common debugging utilities
debug = ["zstd-sys", "thiserror-no-std", "xxhash-rust", "bincode", "serde", "dirs", "derive-enum-all-values", "lossless-transform-utils"]

nightly = ["dxt-lossless-transform-bc1/nightly", "dxt-lossless-transform-common/nightly", 
           "dxt-lossless-transform-api-common/nightly", "safe-allocator-api/nightly"]

[dependencies]
argh = "0.1.13"
rayon = "1.10.0"
lightweight-mmap = "0.6.0"
dxt-lossless-transform-dds = { workspace = true, default-features = true }
dxt-lossless-transform-bc1 = { workspace = true, default-features = true }
dxt-lossless-transform-common = { workspace = true, default-features = true }
dxt-lossless-transform-api-common = { workspace = true, default-features = true }
dxt-lossless-transform-bc1-api = { workspace = true, default-features = true }
dxt-lossless-transform-file-formats-api = { workspace = true, default-features = true }
dxt-lossless-transform-ltu = { workspace = true, default-features = true }
dxt-lossless-transform-zstd = { workspace = true, default-features = true }
safe-allocator-api = { version = "0.4.0" }
thiserror = "2.0.12"
bytesize = { version = "2.0.1" }

# Debug only
zstd-sys = { optional = true, version = "2.0.15", features = ["experimental"] } # 1.5.7
thiserror-no-std = { optional = true, version = "2.0.2" }
xxhash-rust = { optional = true, version = "0.8.12", features = ["xxh3"] }
bincode = { optional = true, version = "2.0.1" }
serde = { optional = true, version = "1.0.215", features = ["derive"] }
dirs = { optional = true, version = "6.0.0" }
derive-enum-all-values = { optional = true, version = "0.2.0" }
lossless-transform-utils = { optional = true, version = "0.1.0" }