[package]
name = "dxt-lossless-transform-file-formats-api"
version = "1.0.0"
edition = "2021"
description = "High-level API for transform-aware file format handling for dxt-lossless-transform"
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.md"

[lib]
bench = false

[features]
default = ["std", "file-io"]
std = [
    "thiserror/std",
    "dxt-lossless-transform-bc1/std",
    "dxt-lossless-transform-bc2/std",
    "dxt-lossless-transform-bc3/std",
    "dxt-lossless-transform-bc7/std",
    "dxt-lossless-transform-common/std",
    "dxt-lossless-transform-bc1-api/std",
    "dxt-lossless-transform-bc2-api/std",
    "dxt-lossless-transform-bc3-api/std",
    "dxt-lossless-transform-bc7-api/std",
    "dxt-lossless-transform-api-common/std",
]
file-io = [
    "std",
    "lightweight-mmap",
    # Use the 'Path' based APIs and mmap functionality.
    "lightweight-mmap/std",
    "lightweight-mmap/mmap",
]

[dependencies]
# Core dependencies
dxt-lossless-transform-bc1-api = { workspace = true, default-features = false }
dxt-lossless-transform-bc2-api = { workspace = true, default-features = false }
dxt-lossless-transform-bc3-api = { workspace = true, default-features = false }
dxt-lossless-transform-bc7-api = { workspace = true, default-features = false }
dxt-lossless-transform-api-common = { workspace = true, default-features = false }

# Core transform crates for untransform operations
dxt-lossless-transform-bc1 = { workspace = true, default-features = false }
dxt-lossless-transform-bc2 = { workspace = true, default-features = false }
dxt-lossless-transform-bc3 = { workspace = true, default-features = false }
dxt-lossless-transform-bc7 = { workspace = true, default-features = false }

# Common utilities
dxt-lossless-transform-common = { workspace = true, default-features = false }

# External dependencies
bitfield = { workspace = true }
thiserror = { workspace = true }

# Optional dependencies for file I/O
lightweight-mmap = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
endian-writer = { workspace = true }
dxt-lossless-transform-dds = { workspace = true, default-features = true }
dxt-lossless-transform-ltu = { workspace = true, default-features = true }
dxt-lossless-transform-bc1-api = { workspace = true, default-features = true } 