[package]
name = "dxt-lossless-transform-file-formats-debug"
version = "1.0.0"
edition = "2021"
description = "Debug and research utilities for dxt-lossless-transform file format handling"
repository.workspace = true
license-file.workspace = true
include = ["src/**/*"]
readme = "README.md"

[lib]
bench = false

[features]
default = ["std", "file-io"]
std = [
    "thiserror/std",
    "dxt-lossless-transform-file-formats-api/std",
    "dxt-lossless-transform-common/std",
]
file-io = [
    "std",
    "lightweight-mmap",
    # Use the 'Path' based APIs and mmap functionality.
    "lightweight-mmap/std",
    "lightweight-mmap/mmap",
    "dxt-lossless-transform-file-formats-api/file-io",
]

[dependencies]
# Core dependencies
dxt-lossless-transform-file-formats-api = { workspace = true, default-features = false }
dxt-lossless-transform-common = { workspace = true, default-features = false }

# External dependencies
thiserror = { workspace = true }

# Optional dependencies for file I/O
lightweight-mmap = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
dxt-lossless-transform-dds = { workspace = true, default-features = true }
dxt-lossless-transform-bc1-api = { workspace = true, default-features = true } 